✨ feat: todo & fix scrollbar height

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -131,6 +131,7 @@
 
 	::-webkit-scrollbar {
 		width: 7.5px;
+		height: 7.5px;
 	}
 
 	::-webkit-scrollbar-thumb {
